[package]
name = "client"
version = "0.1.0"
authors = ["t-lothor"]
edition = "2018"

[dependencies]
reqwest = "0.9.16"
chrono = "0.4.6"
hmac = "0.7.0"
sha2 = "0.8.0"
hyper = "0.12.28"
hex = "0.3.2"
ring = "0.14.6"
data-encoding = "2.1.2"
base64 = "0.10.1"
serde_json = "1.0"
rustc-serialize = "0.3.24"
serde = "1.0.91"
